--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,11 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.nav ul {
+    list-style-type: none;
+}
+
+
     padding-top: 15px;
     margin-right: 20px;
     float: right;
