--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ body {
     list-style-type: none;
 }
 
+.nav {
+    display: inline-block;
+    margin-left: 25px;
+}
+
 
     padding-top: 15px;
     margin-right: 20px;
