--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,22 @@ body {
     list-style-type: none;
 }
 
-.nav {
+.nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+.a {
+    color: #ffffff;
+    text-decoration: none;
+}
+    
 
-    padding-top: 15px;
+
+
+
+
+padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
