--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,12 @@ p {
     font-size: 16px;
 }
 
-
+hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background: url("../images/digital-marketing-meeting.jpg") center/cover;
+}
 
 
 
