--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,11 @@ body {
     text-decoration: none;
 }
 
-p {
+.p {
     font-size: 16px;
 }
 
-hero {
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -54,8 +54,16 @@ hero {
     margin-right: 25px;
 }
 
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
 
-
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
 
 
 
