--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,14 @@ body {
     margin-left: 20px;
 }
 
+.service {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
 
 
 padding-top: 15px;
