--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,26 @@ body {
     color: #ffffff;
 }
 
+.service img {
+    max-height: 200px;
+}
+
+.service h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
 
 padding-top: 15px;
     margin-right: 20px;
